# family-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_layout_config.py
backend/src/app/: database.py  main.py  models.py
backend/src/app/routers/: layout.py
backend/tests/: conftest.py  test_layout.py
caddy/: Caddyfile.dev
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DashboardGrid.tsx
frontend/src/hooks/: useLayout.ts
frontend/src/pages/: DashboardPage.tsx  SettingsPage.tsx
frontend/src/styles/: dashboard.css  tokens.css
frontend/src/widgets/: CalendarWidget.tsx  CountdownWidget.tsx  TodoWidget.tsx  WeatherWidget.tsx  widgetRegistry.ts
