[project]
name = "family-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
